<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout android:id="@+id/demo_container"
                                          xmlns:app="http://schemas.android.com/apk/res-auto"
                                          android:layout_width="match_parent"
                                          android:layout_height="wrap_content"
                                          android:clickable="false"
                                          android:padding="16dp"
                                          app:columnCount="2"
                                          app:useDefaultMargins="true">


        <EditText
            android:id="@+id/demo_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:hint="@string/demo_name"
            android:singleLine="true"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="0"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_number_of_participants"
            app:layout_column="0"
            app:layout_row="1"/>

        <EditText
            android:id="@+id/demo_participants"
            android:layout_width="@dimen/form_width"
            android:layout_height="@dimen/row_height"
            android:hint="@string/demo_participants_hint"
            android:inputType="number"
            android:singleLine="true"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="1"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:text="@string/demo_date"
            app:layout_column="0"
            app:layout_row="2"/>

        <TextView
            android:id="@+id/demo_date"
            android:layout_width="@dimen/form_width"
            android:layout_height="@dimen/row_height"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/demo_pick_date"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="2"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_type"
            app:layout_column="0"
            app:layout_row="3"/>

        <Spinner
            android:id="@+id/demo_spinner"
            android:layout_width="@dimen/form_width"
            android:layout_height="@dimen/row_height"
            android:spinnerMode="dropdown"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="3"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_email"
            app:layout_column="0"
            app:layout_row="4"/>

        <EditText
            android:id="@+id/demo_email"
            android:layout_width="@dimen/form_width"
            android:layout_height="@dimen/row_height"
            android:hint="@string/demo_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="4"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_address"
            app:layout_column="0"
            app:layout_row="5"/>

        <EditText
            android:id="@+id/demo_address1"
            android:layout_width="@dimen/form_width"
            android:layout_height="@dimen/row_height"
            android:hint="@string/demo_address"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="5"/>

        <EditText
            android:id="@+id/demo_address2"
            android:layout_width="@dimen/form_width"
            android:layout_height="@dimen/row_height"
            android:hint="@string/demo_address"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            app:layout_column="1"
            app:layout_gravity="right"
            app:layout_row="6"/>

        <Button
            android:id="@+id/demo_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="bottom"
            app:layout_row="7"/>
    </android.support.v7.widget.GridLayout>
</ScrollView>
